# mkwg

./: .gitignore  Makefile  README.md  __main__.py  keypair.py  pyproject.toml  wg.py
.github/workflows/: release.yaml
